# ims-project

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Makefile  README.md  start.sh
doc/: Makefile  documentation.bib  documentation.tex
model/: pastry_production_model.drawio
src/: Args.cpp  Args.h  Errors.h  ExitCodes.h  OrderTimer.cpp  OrderTimer.h  Processes.cpp  Processes.h  Program.cpp  Program.h  experiments.cpp  experiments.h  macros.h  main.cpp  simulation.cpp  simulation.h  test.cpp  test.h  utils.cpp  utils.h
